--- a/css/main.css
+++ b/css/main.css
@@ -2,11 +2,48 @@
     font-size: 14px;
 }
 
-/*************** MENU ******************/
+/***************** MAIN-PAGE ************************/
 
+/*************** MENU ******************/
+nav.main-page-nav {
+    background: #fff;
+    box-shadow: 1px 1px 20px -13px;
+}
+nav.main-page-nav .row {
+    padding: 20px 0;
+}
+.main-page-nav button, .main-page-nav button a {
+    color: #000;
+    transition: all .35s;
+    border-radius: 0;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+}
+.main-page-nav button a, .main-page-nav button span {
+    border-bottom: 1px solid #3DBFD9;
+    transition: .35s;
+    font-size: 1.4em;
+}
+.main-page-nav button:hover a, .main-page-nav button:hover span {
+    border-bottom-color: transparent;
+
+}
+.main-page-nav button:hover, .main-page-nav button:hover a {
+    color: #fff;
+    background-color: #3DBFD9;
+
+}
+nav.main-page-nav .main-menu-login, nav.main-page-nav .main-menu-faq {
+    width: 80px;
+}
 /*************** PICTURE ***************/
 .tasty-pie {
     height: 400px;
+}
+/****************List**************/
+.pros-cons-block ol {
+    padding-left: 17px;
 }
 /************** LOGIN FORM *************/
 @media (min-width: 768px) {
@@ -15,7 +52,7 @@
     }
 }
 .modal-header {
-    background: #5478cc;
+    background: #3DBFD9;
     color: #fff;
 }
 .modal-header .close {
@@ -63,7 +100,14 @@
 .error-box:last-of-type {
 
 }
-
+.btn-primary {
+    background-color: #3DBFD9;
+    border-color: #3DBFD9;
+}
+.btn-primary:hover {
+    background-color: #339bd9;
+    border-color: #339bd9;
+}
 .msg-box {
 
     font-size: 1em;
