--- a/css/main.css
+++ b/css/main.css
@@ -5,41 +5,49 @@
 /***************** MAIN-PAGE ************************/
 
 /*************** MENU ******************/
-nav.main-page-nav {
-    background: #fff;
+nav {
+    background: transparent;
     box-shadow: 1px 1px 20px -13px;
 }
-nav.main-page-nav .row {
+nav .row {
     padding: 20px 0;
 }
-.main-page-nav button, .main-page-nav button a {
+nav button, nav button a {
     color: #000;
-    transition: all .35s;
+    -webkit-transition: all 0.35s;
+    -moz-transition: all 0.35s;
+    -ms-transition: all 0.35s;
+    -o-transition: all 0.35s;
+    transition: all 0.35s;
     border-radius: 0;
     width: 100%;
     height: 100%;
-    background: #fff;
+    background: transparent;
 }
-.main-page-nav button a, .main-page-nav button span {
+nav button a, .main-page-nav button span {
     border-bottom: 1px solid #3DBFD9;
-    transition: .35s;
+    -webkit-transition: all 0.35s;
+    -moz-transition: all 0.35s;
+    -ms-transition: all 0.35s;
+    -o-transition: all 0.35s;
+    transition: all 0.35s;
     font-size: 1.4em;
 }
-.main-page-nav button:hover a, .main-page-nav button:hover span {
+nav button:hover a, nav button:hover span {
     border-bottom-color: transparent;
-
-}
-.main-page-nav button:hover, .main-page-nav button:hover a {
     color: #fff;
+}
+nav button:hover, nav button:hover a {
+
     background-color: #3DBFD9;
 
 }
-nav.main-page-nav .main-menu-login, nav.main-page-nav .main-menu-faq {
+nav .main-menu-login, nav .main-menu-faq {
     width: 80px;
 }
 /*************** PICTURE ***************/
 .tasty-pie {
-    height: 400px;
+    height: 500px;
 }
 /****************List**************/
 .pros-cons-block ol {
@@ -94,7 +102,11 @@ nav.main-page-nav .main-menu-login, nav.main-page-nav .main-menu-faq {
 .error-box {
     font-size: 1em;
     color: #ff4d2d;
-    transition: .3s;
+    -webkit-transition: all 0.35s;
+    -moz-transition: all 0.35s;
+    -ms-transition: all 0.35s;
+    -o-transition: all 0.35s;
+    transition: all 0.35s;
 }
 
 .error-box:last-of-type {
@@ -122,4 +134,30 @@ nav.main-page-nav .main-menu-login, nav.main-page-nav .main-menu-faq {
 input.error {
     color: #DD6262);
     border-color: #DD6262;
+}
+/***********CAMPAIGN-PAGE*****************/
+
+/*****************MENU********************/
+
+nav.campaign-page-nav .row {
+    padding: 20px 75px;
+}
+nav ul.nav li a {
+    padding: 0;
+}
+nav ul.nav li a button span {
+    font-size: 1.4em;
+}
+nav ul.nav li a:hover button span {
+    color: #fff;
+}
+ul.nav ul.dropdown-menu {
+    padding-top: 10px;
+}
+ul.nav ul.dropdown-menu li a{
+    padding: 20px 10px;
+    text-align: center;
+}
+ul.nav li.dropdown span.dd-span {
+    border-bottom: 1px solid #3DBFD9;
 }
